deployment/postgres-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: command-db
spec:
  replicas: 1
  selector:
    matchLabels:
      app: command-db
  template:
    metadata:
      labels:
        app: command-db
    spec:
      containers:
        - name: command-db
          image: postgres:16.2-alpine
          ports:
            - containerPort: 5432
          volumeMounts:
            - name: postgres-storage
              mountPath: /var/lib/postgresql/data
          livenessProbe:
            exec:
              command: ["pg_isready", "-U", "postgres", "-d", "pret_db"]
            initialDelaySeconds: 30
            periodSeconds: 10
      volumes:
        - name: postgres-storage
          persistentVolumeClaim:
            claimName: command-db-pvc
