deployment/command-service-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: command-service
spec:
  type: LoadBalancer # Change to NodePort or LoadBalancer if needed
  selector:
    app: command-service
  ports:
    - port: 80
      targetPort: 8081
