deployment/postgres-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: command-db
spec:
  selector:
    app: command-db
  ports:
    - protocol: TCP
      port: 5432 # External port
      targetPort: 5432 # Container port
